--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ idna-ssl==1.1.0
 multidict==4.7.6
 python-dotenv==0.13.0
 requests==2.23.0
+tabulate==0.8.7
 typing-extensions==3.7.4.2
 urllib3==1.25.9
 websockets==8.1
